c_lib/hello/include/hello.h

#ifndef HELLO_H
#define HELLO_H

void hello(void);
void hello_name(const char *name);
int give_back(int num);
void modify_num(int *num);
char* modify_name(char *name);
void shorten_str(char *str);
void free_str(char *str);
char* give_str(const char *gift);

#endif